--- a/src/app/components/dialog/tour-dialog/tour-edit/tour-edit.component.html
+++ b/src/app/components/dialog/tour-dialog/tour-edit/tour-edit.component.html
@@ -31,7 +31,7 @@
                 [leafletOptions]="options" [leafletLayers]="layers">
             </div>
             <small id="tourmapHelp" class="form-text text-muted">Suche die Orte aus, die in deiner Tour enthalten sein
-                sollen.</small>
+                sollen (min. 2).</small>
             <hr>
             <div style="max-height: 10rem; overflow-y: auto; overflow-x: hidden;" data-simplebar>
                 <div *ngFor="let location of selectedLocations" class="row" style="margin-bottom: 2px;">
