--- a/src/app/components/dialog/dashboard/dashboard.component.css
+++ b/src/app/components/dialog/dashboard/dashboard.component.css
@@ -1,22 +1,4 @@
-.image {
-    width: auto;
-    height: auto;
-    min-height: 300px;
-    max-height: 300px;
-    margin: 0 auto;
+:host {
+    min-height: 40rem;
+    max-height: 40rem;
 }
-
-.picsum-img-wrapper {
-    text-align: center;
-    box-shadow: inset 0 0 10px rgba(0,0,0,0.3);    
-    background: #f2f2f2;
-}
-
-/* Important part */
-/* .modal-dialog{
-    overflow-y: initial !important
-}
-.modal-body{
-    max-height: 100%;
-    overflow-y: auto;
-} */
