--- a/src/app/components/dialog/dashboard/dashboard.component.html
+++ b/src/app/components/dialog/dashboard/dashboard.component.html
@@ -1,29 +1,38 @@
 <div class="modal-body">
-
-    <!-- 1/3 -->
-    <div>
-        <div style="position: relative;" class="col-lg-4 col-12">
-            <h3 class="border-bottom">Orte</h3>
-            {{locations[1].name}}
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h3>Dashboard</h3>
+            </div>
         </div>
-        <div style="position: relative;" class="col-lg-4 col-12">
-            <h3 class="border-bottom">Bewertungen</h3>
+        <hr>
+        <div class="row">
+            <div class="col-3">
+                <ul ngbNav (navChange)="onNavChange($event)" #nav="ngbNav" [(activeId)]="active" class="nav-pills"
+                    orientation="vertical">
+                    <li ngbNavItem="dashboardUserNav">
+                        <a ngbNavLink>Mein Account</a>
+                        <ng-template ngbNavContent>
+                            <app-user-dashboard [modal]="modal"></app-user-dashboard>
+                        </ng-template>
+                    </li>
+                    <li ngbNavItem="dashboardLocationNav">
+                        <a ngbNavLink>Meine Locations</a>
+                        <ng-template ngbNavContent>
+                            <app-location-dashboard [modal]="modal"></app-location-dashboard>
+                        </ng-template>
+                    </li>
+                    <li ngbNavItem="dashboardTourNav">
+                        <a ngbNavLink>Meine Touren</a>
+                        <ng-template ngbNavContent>
+                            <app-tour-dashboard [modal]="modal"></app-tour-dashboard>
+                        </ng-template>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-9">
+                <div [ngbNavOutlet]="nav" class="ml-4"></div>
+            </div>
         </div>
     </div>
-
-    <!-- 2/3 -->
-    <div>
-        <div style="position: relative;" class="col-lg-4 col-12">
-            <h3 class="border-bottom">Touren</h3>
-    </div>
-
-    <!-- 3/3 -->
-    <div>
-        <div style="position: relative;" class="col-lg-4 col-12">
-            <h3 class="border-bottom">Profileinstellungen</h3>
-        </div>
-        <div style="position: relative;" class="col-lg-4 col-12">
-            <h3 class="border-bottom">Kontoeinstellungen</h3>
-    </div>
-
 </div>
