--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,6 @@
 <app-category-filter></app-category-filter>
 <app-search-location></app-search-location>
 <app-tour-settings></app-tour-settings>
+<app-notification-box></app-notification-box>
 
 <router-outlet></router-outlet>
