--- a/src/app/components/tooltips/location-tooltip/location-tooltip.component.html
+++ b/src/app/components/tooltips/location-tooltip/location-tooltip.component.html
@@ -1,6 +1,5 @@
 <div class="card" style="min-width: 12rem; max-width: 12rem;">
-    <img class="card-img-top" [src]="imageexists ? imageUrl : 'assets/images/no-picture.png'"
-        alt="assets/images/no-picture.png">
+    <img class="card-img-top" [src]="imageUrl ? imageUrl : 'assets/images/no-picture.png'">
     <div class="card-body">
         <ngb-rating *ngIf="ratingValue" [max]="5" [rate]="ratingValue"></ngb-rating>
         <h5 class="card-title">{{location.name}}</h5>
